--- a/DockerFile
+++ b/DockerFile
@@ -1,14 +1,22 @@
-FROM python:3.10
+FROM python:3.9
 
-ADD ./data ./data
-ADD generator.py generator.py
-ADD infrastracture.py infrastracture.py
-ADD main.py main.py
-ADD prep_data.py prep_data.py
-ADD unmask_model.py unmask_model.py
+WORKDIR /app
 
-RUN pip install -r requirements.txt
+COPY ./data ./data
+COPY generator.py generator.py
+COPY infrastracture.py infrastracture.py
+COPY main.py main.py
+COPY prep_data.py prep_data.py
+COPY unmask_model.py unmask_model.py
+COPY requirements.txt requirements.txt
 
-CMD ["python", "./main.py"] 
+#RUN sudo apk add gcc python3-dev musl-dev linux-headers
+
+RUN pip install --upgrade pip
+RUN pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+RUN pip install pyarrow numpy pandas accelerate datasets Flask huggingface-hub nltk openpyxl python-dotenv tokenizers transformers
+RUN pip install telebot
+
+CMD ["python", "./main.py"]
 
 EXPOSE 80:80
