--- a/DockerFile
+++ b/DockerFile
@@ -12,7 +12,7 @@ COPY unmask_model.py unmask_model.py
 RUN pip install --upgrade pip
 RUN pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 RUN pip install pyarrow numpy pandas accelerate datasets Flask huggingface-hub nltk openpyxl python-dotenv tokenizers transformers
-RUN pip install telebot
+RUN pip install pytelegrambotapi
 
 CMD ["python", "./main.py"]
 
