--- a/DockerFile
+++ b/DockerFile
@@ -13,6 +13,6 @@ COPY --chown=user ./main.py ./main.py
 RUN pip install --upgrade pip
 RUN pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 RUN pip install pyarrow numpy pandas accelerate datasets nltk openpyxl python-dotenv rouge_score datasets tqdm trl scikit-learn matplotlib transformers
-RUN pip install aiogram
+RUN pip install fastapi uvicorn[standard]
 
-CMD "main.py"
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "7860"]
